--- a/css/style.css
+++ b/css/style.css
@@ -65,8 +65,8 @@ body {
   animation-name: moveInLeft;
   animation-duration: 1s;
   animation-timing-function: ease-out;
-  /* animation-iteration-count: 3; */
-  /* animation-delay: 3s; */ }
+  animation-iteration-count: 3;
+  animation-delay: 3s; }
 
 .heading-primary--sub {
   display: block;
