--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,19 +1,15 @@
-/* 
-COLORS:
+@import "abstracts/functions";
+@import "abstracts/mixins";
+@import "abstracts/variables";
 
-Light green: #7ed56f
-Medium green: #55c57a
-Dark green: #28b485
+@import "base/animations";
+@import "base/base";
+@import "base/typography";
+@import "base/utilities";
 
-*/
+@import "pages/home";
 
-$color-primary: #55c57a;
-$color-primary-light:#7ed56f;
-$color-primary-dark: #28b485;
 
-$color-grey-dark: #777;
-$color-white: #fff;
-$color-black: #000;
 *,
 *::before,
 *::after {
