--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,6 @@
 *,
 *::before,
 *::after {
-  margin: 0;
   padding: 0;
   box-sizing: inherit; }
 
@@ -129,3 +128,16 @@ body {
     transform: translate(-50%, -50%);
     text-align: center;
     max-width: 100%; }
+
+.row {
+  max-width: 114rem;
+  background-color: #eeeeeed8;
+  margin: 0 auto; }
+  .row:not(:last-child) {
+    margin-bottom: 8rem; }
+  .row .col-1-of-2 {
+    width: calc((100% - 6rem) /2);
+    background-color: black;
+    float: left; }
+    .row .col-1-of-2:not(:last-child) {
+      margin-right: 6rem; }
