--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -2,16 +2,42 @@
        background-color: #eeeeeed8; 
        margin: 0 auto;
        &:not(:last-child) {
-            margin-bottom: $gutter-vertical;
+          margin-bottom: $gutter-vertical;
+       }
+       
+       @include clearfix; 
+
+       [class^="col-"] {
+          color: grey;
+          background-color: rgb(23, 237, 134);
+          float: left;
+            
+          &:not(:last-child) {
+               margin-right: $gutter-horizontal;
+          }
        }
 
        .col-1-of-2 {
-            width: calc((100% - #{$gutter-horizontal}) /2);
-            background-color: black;
-            float: left;
-            
-            &:not(:last-child) {
-                margin-right: $gutter-horizontal;
-            }
+          width: calc((100% - #{$gutter-horizontal}) / 2);
+       }
+
+       .col-1-of-3 {
+          width: calc((100% - #{$gutter-horizontal *2}) / 3);
+       }
+
+       .col-2-of-3 {
+          width: calc(2 * ((100% - #{$gutter-horizontal * 2}) / 3) + #{$gutter-horizontal});
+       }
+
+       .col-1-of-4 {
+          width: calc((100% - #{$gutter-horizontal *3}) / 4);
+       }
+
+       .col-2-of-4 {
+          width: calc((2 * (100% - #{$gutter-horizontal *3}) / 4) + #{$gutter-horizontal});
+       }
+
+       .col-3-of-4 {
+          width: calc(3 * ((100% - #{$gutter-horizontal *3}) / 4) + #{$gutter-horizontal} * 2);
        }
 }
